@@ -1,3 +1,7 @@
+Wed Jul 12 08:26:11 BST 2006 (njh)
+----------------------------------
+  * clamav-milter:	Better use of clamav-config.h
+
 Tue Jul 11 18:45:22 BST 2006 (njh)
 ----------------------------------
   * clamav-milter:	Use tableUpdate() to maintain the blacklist
